# generation-under-synthetic-constraint

./: LICENSE  README.MD  example_generation.ipynb  pyproject.toml
exploit_results/: add_scores_to_db.py  exploit_results_guacamol.ipynb  exploit_results_pi3kmtor.ipynb
exploit_results/results_data/: diversity_molecules_in_blueprint.csv  diversity_molecules_in_blueprint_good_RScore.csv  results_blueprint_pi3kmtorRAscore_1.csv  results_blueprint_pi3kmtorRSPred_1.csv  results_blueprint_pi3kmtorRSPredpi3kmtor_1.csv  results_blueprint_pi3kmtorRScore_1.csv  results_blueprint_pi3kmtorSAscore_1.csv  results_blueprint_pi3kmtorSCscore_1.csv  results_blueprint_pi3kmtor_1.csv  results_guacamol_top_100_per_task.csv  results_guacamol_top_100_per_task.json
guacamol/guacamol/: __init__.py  assess_distribution_learning.py  assess_goal_directed_generation.py  benchmark_suites.py  benchmark_suites_original.py  common_scoring_functions.py  common_scoring_functions_iktos.py  distribution_learning_benchmark.py  frechet_benchmark.py  goal_directed_benchmark.py  goal_directed_generator.py  scoring_function.py  standard_benchmarks.py  standard_benchmarks_iktos.py
guacamol_baselines/best_from_chembl/: goal_directed_generation.py  optimizer.py
guacamol_baselines/graph_ga/: goal_directed_generation.py
guacamol_baselines/graph_mcts/: distribution_learning.py  goal_directed_generation.py
guacamol_baselines/moses_baselines/: aae_distribution_learning.py  aae_train.py  organ_distribution_learning.py  (+1 more)
pi3kmtor/: all_pi3k.csv  pi3kmtor.smiles  weights_mtor.json  weights_pi3k.json
(+38 files in other folders)
