[tool.poetry]
name = "paper_generation_under_synth_constraint"
version = "0.1.0"
description = "Code associated to the paper about generation under synthetic constraint"
authors = ["mparrot <maud.parrot@iktos.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
scipy = "^1.6.0"
torch = "^1.7.1"
tqdm = "^4.56.1"
requests = "^2.25.1"
six = "^1.15.0"
tensorflow = "^2.4.1"
FCD = "^1.1"
sklearn = "^0.0"
pymongo = "^3.11.3"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
